--- a/assignment/style.css
+++ b/assignment/style.css
@@ -5,4 +5,10 @@ header {
 }
 main {
     background-color: lightgray;
+    padding: 1em;
+}
+body {
+    background-image: url(record.png);
+    background-repeat: repeat;
+    margin: 0;
 }
