--- a/assignment/style.css
+++ b/assignment/style.css
@@ -1,14 +1,16 @@
-header {
+.header {
     background-color: black;
     color: white;
     text-align: center;
 }
-main {
+.main {
     background-color: lightgray;
     padding: 1em;
 }
 body {
+    margin: 0;
+}
+.body {
     background-image: url(record.png);
     background-repeat: repeat;
-    margin: 0;
 }
